# ADJAR_64bit

./: README.md  pyinstaller.spec  pyproject.toml
demo_out/: results_level1.npz  results_level2.npz  synthetic_ground_truth.npz
scripts/: make_synthetic_npz.py  run_synthetic_demo.py
src/adjar64/: __init__.py
src/adjar64.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/adjar64/accel/: __init__.py  fftconv.py
src/adjar64/core/: __init__.py  correct.py  distributions.py  estimate.py  filter.py  metrics.py  subaverages.py
src/adjar64/gui/: __init__.py  main.py
src/adjar64/io/: __init__.py  exporters.py  loaders.py
src/adjar64/plot/: __init__.py
tests/: test_conv_equivalence.py  test_level1_synthetic.py  test_level2_convergence.py
